--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+thomas:
+  name: Thomas
+  email: thomas@example.com
+  password_digest: <%= User.digest('password') %>
+
