--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,4 +3,17 @@ thomas:
   name: Thomas
   email: thomas@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+archer:
+  name: Emiya Shirou
+  email: shirou@typemoon.fate
+  password_digest: <%= User.digest('password') %>
+  
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
 
