--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,16 +4,22 @@ thomas:
   email: thomas@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true,
+  activated_at: <%= Time.zone.now %>
 
 archer:
   name: Emiya Shirou
   email: shirou@typemoon.fate
   password_digest: <%= User.digest('password') %>
+  activated: true,
+  activated_at: <%= Time.zone.now %>
   
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true,
+  activated_at: <%= Time.zone.now %>
 <% end %>
 
